--- a/public/index.html
+++ b/public/index.html
@@ -26,37 +26,37 @@
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <meta name="theme-color" content="#00bfbf" />
-        <title>Jo Lienhoop | Bremen, Germany</title>
+        <title>Tommy Xu | Vancouver, Canada</title>
         <script type="application/ld+json">
             {
                 "@context": "https://schema.org",
                 "@type": "Organization",
-                "name": "Jo Lienhoop",
-                "url": "https://jolienhoop.com",
-                "logo": "https://jolienhoop.com/jo.svg",
-                "email": "mailto:hey@jolienhoop.com"
+                "name": "Tommy Xu",
+                "url": "https://tommymxu.com",
+                <!-- "logo": "https://jolienhoop.com/jo.svg", -->
+                "email": "mailto:tommysteryy@gmail.com"
             }
         </script>
         <meta name="author" content="Jo Lienhoop" />
         <meta
             name="description"
-            content="Hey, I'm Jo Lienhoop, a Computer Science student based in Bremen, Germany. I love all things technical. Talk soon!"
+            content="Hey, I'm Tommy Xu, a senior CS, STAT, and Management student at UBC. I love all things ML and Engineering. Talk soon!"
         />
         <meta
             name="keywords"
-            content="jo,lienhoop,jolienhoop,computer,science,bremen,germany,personal,website,portfolio,template,kit,react,github,linkedin,google,gitlab,telegram,material,design,ui,webapp"
+            content="personal,website,portfolio,template,kit,tommy,xu,tommysteryy,computer,science,vancouver,canada,react,github,linkedin,google,material,design,ui,webapp"
         />
         <meta property="og:image" content="%PUBLIC_URL%/social-image.png" />
         <meta property="og:image:type" content="image/png" />
         <meta property="og:image:width" content="1200" />
         <meta property="og:image:height" content="600" />
 
-        <meta property="og:title" content="Jo Lienhoop | Bremen, Germany" />
-        <meta property="og:site_name" content="jolienhoop.com" />
-        <meta property="og:url" content="https://jolienhoop.com" />
+        <meta property="og:title" content="Tommy Xu | Vancouver, Canada" />
+        <meta property="og:site_name" content="tommymxu.com" />
+        <meta property="og:url" content="https://tommymxu.com" />
         <meta
             property="og:description"
-            content="Hey, I'm Jo Lienhoop, a Computer Science student based in Bremen, Germany. I love all things technical. Talk soon!"
+            content="Hey, I'm Tommy Xu, a senior CS, STAT, and Management student at UBC. I love all things ML and Engineering. Talk soon!"
         />
         <link
             rel="stylesheet"
